objects/Trip_Report__c.object
<CustomObject>
    <description>Object used for recording information about the onsite install, primarily filled out by the BSC associates</description>
    <fields>
        <fullName>Agenda_Signed_Off_Complete__c</fullName>
        <description>field use to indicate the percent complete for the deliverable</description>
        <inlineHelpText>Please enter the percent complete for the deliverable</inlineHelpText>
        <label>Agenda Signed Off - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agenda_Signed_Off_Risk__c</fullName>
        <label>Agenda Signed Off - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Arrival_Start_Date_Time__c</fullName>
        <description>Field to indicate when the associate arrived to begin the onsite portion of the install</description>
        <inlineHelpText>Please enter the day/time that you arrived at the dealership</inlineHelpText>
        <label>Arrival (Start) Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Associate_s_Title__c</fullName>
        <defaultValue>$User.Title</defaultValue>
        <description>The title for the associate filling out the record</description>
        <inlineHelpText>Default value will be the logged in associated.  You can manually change  the field is required.</inlineHelpText>
        <label>Associate&apos;s Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associated_SubProjectSite__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Relationship field to designate the site for the Trip Report</description>
        <inlineHelpText>If you launch the &quot;new&quot; from the site this field will be auto-updated with the related Site.  You can also choose a different site or replace if the relationship was wrong.</inlineHelpText>
        <label>Associated SubProjectSite</label>
        <referenceTo>SubProjectSite__c</referenceTo>
        <relationshipLabel>Trip Reports</relationshipLabel>
        <relationshipName>Trip_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_State__c</fullName>
        <formula>Associated_SubProjectSite__r.City__c &amp; &quot;, &quot; &amp;   Associated_SubProjectSite__r.State_Province__c</formula>
        <label>City, State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversion_Verified_Risk__c</fullName>
        <description>Field to indicate if the deliverable is at risk</description>
        <inlineHelpText>Please select the proper risk level for this deliverable to be completed on-time.</inlineHelpText>
        <label>Conversion Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Verified__c</fullName>
        <description>Field to indicate the progress towards completion</description>
        <inlineHelpText>Please select the appropriate percent complete for this deliverable</inlineHelpText>
        <label>Conversion Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCS_3rd_Party_Comm_Verified_Complete__c</fullName>
        <description>field used to indicate the progress complete for the deliverable</description>
        <inlineHelpText>Please select the proper value to indicate your progress toward completion</inlineHelpText>
        <label>DCS/3rd Party Comm Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCS_3rd_Party_Comm_Verified_Risk__c</fullName>
        <label>DCS/3rd Party Comm Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_Name_CMF__c</fullName>
        <description>Field indicating the Dealer name and CMF number for the report</description>
        <formula>Associated_SubProjectSite__r.CMF_Name__r.Account__r.Name  &amp; &quot; / &quot; &amp; Associated_SubProjectSite__r.Ship_CMF__c</formula>
        <inlineHelpText>This is an automated field based on the related SubProject site</inlineHelpText>
        <label>Dealership Name / CMF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>This field is to denote the department for the report</description>
        <inlineHelpText>Please select a department for the trip report</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Departure_Finish_Date_Time__c</fullName>
        <description>Field to indicate when the associate completed their time at the dealership</description>
        <inlineHelpText>Please enter the date/time that you departed the dealership at the conclusion of the onsite portion of the install</inlineHelpText>
        <label>Departure (Finish) Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment_Verified_Complete__c</fullName>
        <description>field to indicate the percent complete for the deliverable</description>
        <inlineHelpText>please select the proper value for the deliverable</inlineHelpText>
        <label>Equipment Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Equipment_Verified_Risk__c</fullName>
        <label>Equipment Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forms_Printers_Equipment_Verified__c</fullName>
        <description>Field used to indicate the progress percent for the deliverable</description>
        <inlineHelpText>Please select the proper percent complete</inlineHelpText>
        <label>Forms &amp; Printers Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forms_Printers_Verified_Risk__c</fullName>
        <label>Forms &amp; Printers Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Training_Completed_Complete__c</fullName>
        <description>Field used for indicating the percent complete for the deliverable</description>
        <inlineHelpText>please select the appropriate percent complete for the deliverable</inlineHelpText>
        <label>Manager Training Completed - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_Training_Completed_Risk__c</fullName>
        <label>Manager Training Completed - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Installed__c</fullName>
        <description>Multi select field to indicate the product(s) being installed</description>
        <inlineHelpText>Please select the product for the Trip Report</inlineHelpText>
        <label>Product(s) Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Need to determine the actual list</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Order Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dispatching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Setups_Verified_Complete__c</fullName>
        <description>field to designate the percent complete of the deliverable</description>
        <inlineHelpText>Please select the proper percent complete for the deliverable</inlineHelpText>
        <label>Setups Verified - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Setups_Verified_Risk__c</fullName>
        <label>Setups Verified - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Name__c</fullName>
        <formula>Associated_SubProjectSite__r.SubProject_Name__c</formula>
        <label>SubProject Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_of_Users__c</fullName>
        <description>Field used to indicate the number of users in the department</description>
        <inlineHelpText>Please enter the total number of users in the department</inlineHelpText>
        <label>Total # of Users</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Training_Completed_Complete__c</fullName>
        <description>field used to indicate the percent complete for the deliverable</description>
        <inlineHelpText>Please select the appropriate percent compete for the deliverable</inlineHelpText>
        <label>User Training Completed - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Training_Completed_Risk__c</fullName>
        <label>User Training Completed - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users_Capable_of_Logging_in_Complete__c</fullName>
        <description>Field to indicate the progress of the deliverable</description>
        <inlineHelpText>Please select the proper percent complete for the deliverable</inlineHelpText>
        <label>Users Capable of Logging in - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Users_Capable_of_Logging_in_Risk__c</fullName>
        <label>Users Capable of Logging in - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WIP_Completed_PercentComplete__c</fullName>
        <description>Picklist to show the completion percentage for the item indicated</description>
        <inlineHelpText>Please select your percent complete for WIP completed.</inlineHelpText>
        <label>WIP Completed - % Complete</label>
        <picklist>
            <picklistValues>
                <fullName>00%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WIP_Completed_RYG__c</fullName>
        <formula>IF(ISPICKVAL(WIP_Completed_Risk__c, &quot;RED&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAS&quot;, &apos;At Risk&apos;),  
IF(ISPICKVAL (WIP_Completed_Risk__c, &quot;YELLOW&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAT&quot;, &apos;Caution&apos;),IMAGE(&quot;/servlet/servlet.FileDownload?file=01533000001pMAR&quot;, &apos;On Target&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WIP Completed RYG:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WIP_Completed_Risk__c</fullName>
        <description>Field used to indicate the current risk status of the reported item</description>
        <inlineHelpText>Please select the appropriate risk level for completing this item.</inlineHelpText>
        <label>WIP Completed - Risk</label>
        <picklist>
            <picklistValues>
                <fullName>GREEN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>YELLOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>no_of_Onsite_Days__c</fullName>
        <description>Field used to indicate the number of days the associate is expected to be onsite</description>
        <inlineHelpText>Please enter the number of days that you are scheduled to be onsite for the install</inlineHelpText>
        <label># of Onsite Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trip Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>WIP_Completed_RYG__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TripReport-{0000}</displayFormat>
        <label>Trip Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip Reports</pluralLabel>
    <recordTypes>
        <fullName>Install_Assist</fullName>
        <active>true</active>
        <description>Record to be used when the associate is the install assist for a department(s) when filling out the Trip Report</description>
        <label>Install Assist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Install_Lead</fullName>
        <active>true</active>
        <description>Record to be used when the associate is the install lead for a department(s) when filling out the Trip Report</description>
        <label>Install Lead</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>